k8/name-space.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-namespace
  labels:
    name: test
