k8/service-1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-deployment
  namespace: test-namespace
  labels:
    app: service-1
spec:
  selector:
    matchLabels:
      app: service-1
  replicas: 3  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: service-1
        image: service-1/v5
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "150m"
            memory: "500Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
