k8/service-2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2-deployment
  namespace: test-namespace
  labels:
    app: service-2
spec:
  selector:
    matchLabels:
      app: service-2
  replicas: 1
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: service-2
        image: servicer-2/v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
