k8/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: test-namespace
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
