k8/service-1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-1-service
  namespace: test-namespace
spec:
  selector:
    app: service-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
