k8/service-2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2-service
  namespace: test-namespace
spec:
  selector:
    app: service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
